NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/CONTAINER_Quote_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Quote Snapshot</label>
    <nameField>
        <displayFormat>QSN-{000000}</displayFormat>
        <label>Quote Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>