NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Air_Exchange__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Air_Exchange__c</fullName>
    <label>Air Exchange (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>