NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_ANTI_TAMPER_REFRIGERANT_SEALS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ANTI_TAMPER_REFRIGERANT_SEALS__c</fullName>
    <label>ANTI-TAMPER REFRIGERANT SEALS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>