NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_ARCTIC_OPTION__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ARCTIC_OPTION__c</fullName>
    <label>ARCTIC OPTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>