NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_ASO_Comments__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Comments__c</fullName>
    <label>ASO Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>