NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_ASO_Issue_Dt__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Issue_Dt__c</fullName>
    <label>ASO Issue Dt.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>