NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_BACK_PANEL__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BACK_PANEL__c</fullName>
    <label>BACK PANEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>