NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_BATTERY__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BATTERY__c</fullName>
    <label>BATTERY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>