NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_BOX_LOCKING_TAB__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BOX_LOCKING_TAB__c</fullName>
    <label>BOX LOCKING TAB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>