NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_BOX_VACUUM_RELIEF_VALVE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BOX_VACUUM_RELIEF_VALVE__c</fullName>
    <label>BOX VACUUM RELIEF VALVE (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>