NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_BUILT_FROM__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BUILT_FROM__c</fullName>
    <label>BUILT FROM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>