NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_BULKHEAD_PENETRATION__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_BULKHEAD_PENETRATION__c</fullName>
    <label>BULKHEAD PENETRATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>