NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CABLE_RESTRAINT__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CABLE_RESTRAINT__c</fullName>
    <label>CABLE RESTRAINT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>