NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CAP_35__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CAP_35__c</fullName>
    <label>CAP 35</label>
    <length>255</length>
    <type>Text</type>
</CustomField>