NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CE_Certification_Marking__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CE_Certification_Marking__c</fullName>
    <label>CE Certification Marking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>