NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CERTIFICATION__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CERTIFICATION__c</fullName>
    <label>CERTIFICATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>