NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Commissioning_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Work_Order__c</fullName>
    <label>Commissioning Work Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>