NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Commissioning_Work_Order_Up__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Commissioning_Work_Order_Up__c</fullName>
    <label>Commissioning Work Order</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>