NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_COMPRESSOR__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_COMPRESSOR__c</fullName>
    <label>COMPRESSOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>