NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_COMPRESSOR_PRESSURE_GUAGES__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_COMPRESSOR_PRESSURE_GUAGES__c</fullName>
    <label>COMPRESSOR PRESSURE GUAGES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>