NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_COND_MOTOR__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_COND_MOTOR__c</fullName>
    <label>COND MOTOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>