NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CONDENSER__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CONDENSER__c</fullName>
    <label>CONDENSER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>