NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CONTROL_BOX_REMOVABLE_HINGE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CONTROL_BOX_REMOVABLE_HINGE__c</fullName>
    <label>CONTROL BOX REMOVABLE HINGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>