NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CONTROLLER__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CONTROLLER__c</fullName>
    <label>CONTROLLER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>