NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Customer__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Snapshots</relationshipLabel>
    <relationshipName>Quote_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>