NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_CUSTOMER_LOGOS_DECALS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_CUSTOMER_LOGOS_DECALS__c</fullName>
    <label>CUSTOMER LOGOS &amp; DECALS (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>