NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_PO__c</fullName>
    <label>Customer PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>