NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_DATACORDER_CONFIGURATION__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_DATACORDER_CONFIGURATION__c</fullName>
    <label>DATACORDER CONFIGURATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>