NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_DEHUMIDIFICATION__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_DEHUMIDIFICATION__c</fullName>
    <label>DEHUMIDIFICATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>