NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_DUAL_VOLTAGE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_DUAL_VOLTAGE__c</fullName>
    <label>DUAL VOLTAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>