NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_EBS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_EBS__c</fullName>
    <label>EBS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>