NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_EEM_ENHAN_ECON_MODE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_EEM_ENHAN_ECON_MODE__c</fullName>
    <label>EEM [ENHAN. ECON. MODE]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>