NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_EVAP_MOTOR__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_EVAP_MOTOR__c</fullName>
    <label>EVAP MOTOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>