NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Factory_Rework__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Factory_Rework__c</fullName>
    <label>Factory Rework</label>
    <length>255</length>
    <type>Text</type>
</CustomField>