NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Factory_Rework_Up__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Factory_Rework_Up__c</fullName>
    <label>Factory Rework</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>