NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_FASTENERS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_FASTENERS__c</fullName>
    <label>FASTENERS (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>