NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_FUELWISE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_FUELWISE__c</fullName>
    <label>FUELWISE (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>