NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_HANDLES__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_HANDLES__c</fullName>
    <label>HANDLES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>