NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_INTERROGATOR__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_INTERROGATOR__c</fullName>
    <label>INTERROGATOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>