NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Job_Number__c</fullName>
    <label>Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>