NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_LABELS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_LABELS__c</fullName>
    <label>LABELS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>