NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_LEAKAGE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_LEAKAGE__c</fullName>
    <label>LEAKAGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>