NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_MODIFIED_ATMOSPHERE_CA__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_MODIFIED_ATMOSPHERE_CA__c</fullName>
    <label>MODIFIED ATMOSPHERE (CA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>