NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_NITROGEN_PORT__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_NITROGEN_PORT__c</fullName>
    <label>NITROGEN PORT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>