NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_PID_No__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PID_No__c</fullName>
    <label>PID No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>