NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_PLASTIC_SHIPPING_COVER__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PLASTIC_SHIPPING_COVER__c</fullName>
    <label>PLASTIC SHIPPING COVER (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>