NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_PLUG_230V__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PLUG_230V__c</fullName>
    <label>PLUG 230V</label>
    <length>255</length>
    <type>Text</type>
</CustomField>