NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_PROGRAM_OPTIONS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PROGRAM_OPTIONS__c</fullName>
    <label>PROGRAM OPTIONS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>