NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Qty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Qty__c</fullName>
    <label>Qty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>