NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_QUEST__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_QUEST__c</fullName>
    <label>QUEST (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>