NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Quote__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quote Snapshots</relationshipLabel>
    <relationshipName>Quote_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>