NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_RAIN_GUTTERS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RAIN_GUTTERS__c</fullName>
    <label>RAIN GUTTERS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>