NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_REFRIG_CHARGE_LBS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_REFRIG_CHARGE_LBS__c</fullName>
    <label>REFRIG CHARGE (LBS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>