NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_REFRIG_TEMP_SENSOR__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_REFRIG_TEMP_SENSOR__c</fullName>
    <label>REFRIG TEMP SENSOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>