NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Refrigerant__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Refrigerant__c</fullName>
    <label>Refrigerant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>