NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_RETURN_AIR_SENSOR_WIRE_LENGTH__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RETURN_AIR_SENSOR_WIRE_LENGTH__c</fullName>
    <label>RETURN AIR SENSOR WIRE LENGTH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>