NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_RM_RECEPTACLE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RM_RECEPTACLE__c</fullName>
    <label>RM RECEPTACLE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>