NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_RMM_and_Harness__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RMM_and_Harness__c</fullName>
    <label>RMM and Harness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>