NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_RMU__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RMU__c</fullName>
    <label>RMU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>