NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_RMU_for_ML5__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_RMU_for_ML5__c</fullName>
    <label>RMU for ML5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>