NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Sales_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Sales_Order_Date__c</fullName>
    <label>Sales Order Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>