NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_SPECIAL_MOUNTING__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_SPECIAL_MOUNTING__c</fullName>
    <label>SPECIAL MOUNTING (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>