NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Special_Option__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Special_Option__c</fullName>
    <label>Special Option</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>