NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_THERMO_PORT__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_THERMO_PORT__c</fullName>
    <label>THERMO PORT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>