NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Total_Unit_Option_Weight__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Total_Unit_Option_Weight__c</fullName>
    <label>Total Unit + Option Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>