NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_TRIPWISE__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_TRIPWISE__c</fullName>
    <label>TRIPWISE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>