NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_UPFLOW__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_UPFLOW__c</fullName>
    <label>UPFLOW (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>