NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_UPPER_AIR_EXCHANGE_LABELS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_UPPER_AIR_EXCHANGE_LABELS__c</fullName>
    <label>UPPER AIR EXCHANGE LABELS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>