NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_USDA__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_USDA__c</fullName>
    <label>USDA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>