NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Vent_Positioning_Sensor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Vent_Positioning_Sensor__c</fullName>
    <label>Vent Positioning Sensor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>