NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_VOLTAGE_SHIELDS__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_VOLTAGE_SHIELDS__c</fullName>
    <label>VOLTAGE SHIELDS (*)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>