NATTQA-ENV/force-app/main/default/objects/CONTAINER_Quote_Snapshot__c/fields/CONTAINER_Warranty_Motor__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Warranty_Motor__c</fullName>
    <label>Warranty - Motor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>